--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <style src = "styles.css>
     <title>Apply JavaScript example</title>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
@@ -22,4 +23,5 @@
   <body>
     <button>Click me</button>
   </body>
+                                                  </style>
 </html>
