--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <style src = "styles.css>
     <title>Apply JavaScript example</title>
+    <link rel="stylesheet" href="styles.css" />
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         function createParagraph() {
@@ -23,5 +23,5 @@
   <body>
     <button>Click me</button>
   </body>
-                                                  </style>
+                                                 
 </html>
