--- a/index.html
+++ b/index.html
@@ -1,47 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <title>Strings: Task 1</title>
-    <link rel="stylesheet" href="../styles.css" />
-    <style>
-      * {
-        box-sizing: border-box;
-      }
+    <meta charset="utf-8">
 
-      p {
-        color: purple;
-        margin: 0.5em 0;
-      }
-    </style>
+    <title>Image gallery</title>
+
+    <link rel="stylesheet" href="style.css">
+    
   </head>
 
   <body>
-    <section class="preview">
+    <h1>Image gallery example</h1>
 
-
-
-    </section>
-
-    <textarea class="playable playable-js" style="height: 220px;">
-
-// Add your code here
-
-let quoteStart = 'Don't judge each day by the harvest you reap ';
-
-// Don't edit the code below here!
-
-section.innerHTML = ' ';
-let para1 = document.createElement('p');
-para1.textContent = finalQuote;
-
-section.appendChild(para1);
-    </textarea>
-
-    <div class="playable-buttons">
-      <input id="reset" type="button" value="Reset" />
+    <div class="full-img">
+      <img class="displayed-img" src="images/pic1.jpg">
+      <div class="overlay"></div>
+      <button class="dark">Darken</button>
     </div>
+
+    <div class="thumb-bar">
+
+
+    </div>
+    <script src="main.js"></script>
   </body>
-  <script class="editable"></script>
-  <script src="../playable.js"></script>
 </html>
