--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang = "en-US">
   <head> header 
   <title> title </title>
-  <script src = "script.js> </script>
+  <script src = "script.js"> </script>
+	  <style src = "style.css"> </style>
                  </head>       
   <h3 class="fixed">Click the letters!</h3>
 <div class="word">
